primer commit nuevaRama

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                </ul>
            </nav>
        </header>
-       <hr class="separador">
+       <hr class=" color-change-2x separador">
         <main class="main">
             <div class="main__divContenedor">
             <div class="main__div"><img class="main__divImg" src="./imagenes/fondo4.jpg" alt="">
@@ -42,7 +42,7 @@
             </div>
         </div>
         </main>
-        <hr class="separador">
+        <hr class=" color-change-2x separador">
         <footer class="footer">
             <div class="footer__divContenedor">
                 <div class="footer__div"> <img class="footer__divImg" src="./imagenes/mapa.jpg" alt=""></div>
